[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/props/Grass.gd" type="Script" id=1]
[ext_resource path="res://sounds/Fantozzi-SandR3.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/Shaders/Wind move.shader" type="Shader" id=4]
[ext_resource path="res://scenes/items/extra life.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/items/ItemSpawner.gd" type="Script" id=6]
[ext_resource path="res://resources/Environment Tilesets & Tilemaps/flowers_1_128x128.webp" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/speed = 2.0
shader_param/minStrength = 0.625
shader_param/maxStrength = 0.01
shader_param/strengthScale = 100.0
shader_param/interval = 3.5
shader_param/detail = 1.0
shader_param/distortion = null
shader_param/heightOffset = null
shader_param/offset = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 28.7898

[sub_resource type="CircleShape2D" id=3]
radius = 68.4955

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.06512, 4.04912 ), Vector2( 0.758937, 4.04912 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.243137 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("stream:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("stream:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_auto_delete"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("itemSpawner")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"

[sub_resource type="Animation" id=5]
resource_name = "move"

[node name="flowers" type="Area2D"]
scale = Vector2( 1.16146, 1.16146 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 15.4977, -71.4618 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
offset = Vector2( -6.06301, -4.58121 )

[node name="hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( -18.7015, -35.7105 )
rotation = 1.5708
scale = Vector2( 2.29674, 2.69787 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -23.1346, -38.9636 )
shape = SubResource( 3 )

[node name="stream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 4 )
anims/idle = SubResource( 6 )
anims/move = SubResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -37.7461, -62.0985 )
emitting = false
amount = 4
lifetime = 0.6
one_shot = true
explosiveness = 1.0
randomness = 1.0
texture = ExtResource( 7 )
emission_shape = 1
emission_sphere_radius = 80.0

[node name="Timer" type="Timer" parent="."]

[node name="itemSpawner" type="Position2D" parent="."]
position = Vector2( -23.2466, -35.3004 )
script = ExtResource( 6 )
spawn_1 = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_flowers_area_entered"]
